--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0px;
 }
 .jumbotron{
+    margin-top: 50px;
     background-color: yellow;
     color: black;
 }
@@ -26,4 +27,9 @@ footer{
     padding: 10px 10px 0 10px ;
     background-color: yellow;
     
+}
+
+
+.footer-address-icon{
+    padding-right: 10px;
 }
