--- a/style.css
+++ b/style.css
@@ -2,30 +2,43 @@
     padding:0px;
     margin: 0px;
 }
+
 .jumbotron{
     margin-top: 50px;
     background-color: yellow;
     color: black;
 }
-
+.imgCarrusel{
+    width: 2000px;
+    height: 320px;
+}
 .card-hotel{
-    flex: 1 150px;
-    padding: 2px 5px 2px 5px;
+    /*margin: 10px;*/
+    flex: 1 250px;
+    padding: 2px 0px 1px 0px;
     margin-top: 10px;
 }
-
+.card-subtitle{
+    margin-top: 10px;
+}
 .btn-reserva{
-    width: 98%;
+    width: 100%;
    /* position: absolute;*/
     left: 0;
     bottom: 0;
     background-color: #0069d9;
-   
+   border-radius: 0px;
 }
 .btn-reserva > span{
 margin-left: 10px;
 }
 
+.btn-contacto{
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    background-color: green;
+}
 footer{
     margin-top: 10px;
     margin-bottom: 0px;
